--- a/sass/layouts/_our-menu.scss
+++ b/sass/layouts/_our-menu.scss
@@ -13,14 +13,12 @@
 	h2 {
 		font-size: 6.4rem;
 		color: #ff0000;
-		letter-spacing: -4px;
 		font-weight: bold;
 	}
 	span {
 		font-size: 2rem;
 		color: #333333;
 		opacity: 0.6;
-		letter-spacing: -1px;
 	}
 }
 .our-menu-items {
