--- a/sass/style.css
+++ b/sass/style.css
@@ -442,7 +442,6 @@ span {
 .our-menu-title h2 {
   font-size: 6.4rem;
   color: #ff0000;
-  letter-spacing: -4px;
   font-weight: bold;
 }
 
@@ -450,7 +449,6 @@ span {
   font-size: 2rem;
   color: #333333;
   opacity: 0.6;
-  letter-spacing: -1px;
 }
 
 .our-menu-items {
@@ -488,7 +486,6 @@ span {
 .our-menu-item-text h4 {
   font-size: 20px;
   font-weight: bold;
-  letter-spacing: -1px;
   color: #1e1d23;
 }
 
@@ -496,7 +493,6 @@ span {
   font-size: 16px;
   color: #333333;
   opacity: 0.6;
-  letter-spacing: -1px;
   width: 270px;
   font-weight: 500;
 }
@@ -568,7 +564,6 @@ span {
   height: 2.5rem;
   background-color: #75d007;
   text-align: center;
-  margin-bottom: 10px;
 }
 
 .speacial-offer-promotion span {
@@ -589,8 +584,11 @@ span {
   font-size: 2.4rem;
   color: #ffffff;
   opacity: 0.6;
-  letter-spacing: -1px;
   font-weight: 300;
+}
+
+.special-offer-button-wrapper {
+  margin-top: 10px;
 }
 
 .special-offer-button {
@@ -604,7 +602,6 @@ span {
   background-color: transparent;
   border: 2px solid #ffffff;
   color: #ffffff;
-  margin-top: 15xp;
 }
 
 .special-offer-button:hover {
